<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieRating</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="year">Release Year</string>
    <string name="moviename">Movie Name</string>
    <string name="duration">Duration</string>
    <string name="reviews">Write your review</string>
    <string name="starring">Starring</string>
    <string name="director">Director</string>
    <string name="save">SAVE</string>
    <string name="ok">OK</string>
    <string name="directorname">Director Name</string>
    <string name="title_activity_main1">Main1</string>

</resources>
